--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "normalize.css": "^8.0.1",
+    "unsplash-js": "^7.0.15",
     "vue": "^2.5.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.3.4"
